syntax = "proto3";
import "common/request.proto";
package dsnet.minbft.proto;

message MinBFTMessage {
    oneof msg {
        RequestMessage request = 1;
        ReplyMessage reply = 2;
    }
}

message RequestMessage {
    dsnet.Request common = 1;
    string sig = 2;
}

message ReplyMessage {
    uint32 replicaid = 1;
    string reply = 2;
    uint64 clientreqid = 3;
    string sig = 4;
}
